fixed overflow in headerOverlay and reservationImg

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@ align-items: end;
 .headerOverlay {
 margin-top: 130px;
 max-width: 945px;
-width: 945px;
+width: 100%;
 height: 232px;
 background-color: rgba(0,3,36,0.8);
 color: #E5FEFF;
@@ -96,7 +96,8 @@ color: white;
 }
 
 .reservationImg {
-width: 1137px;
+max-width: 1137px;
+width: 100%;
 height: 414px;
 object-fit: cover;
 object-position: center;
@@ -112,4 +113,3 @@ footer {
 .card {
     margin-bottom: 20px !important;
 }
-
